# snowducks

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  extension_config.cmake  mypy.ini
src/cli/: pyproject.toml  requirements-dev.txt  snowducksi  snowducksui  start_duckdb_interactive.py
src/cli/snowducks/: __init__.py  __main__.py  cli.py  config.py  core.py  ducklake_manager.py  exceptions.py  utils.py
test/cpp/: CMakeCache.txt  CMakeLists.txt  test_snowducks_extension.cpp
test/cpp/duckdb_build/: duckdb_platform_binary
test/cpp/duckdb_build/extension/parquet/decoder/: ub_duckdb_parquet_decoders.cpp
test/cpp/duckdb_build/extension/parquet/reader/: ub_duckdb_parquet_readers.cpp
test/cpp/duckdb_build/extension/parquet/writer/: ub_duckdb_parquet_writers.cpp
test/cpp/duckdb_build/src/catalog/: ub_duckdb_catalog.cpp
test/cpp/duckdb_build/src/catalog/catalog_entry/: ub_duckdb_catalog_entries.cpp
test/cpp/duckdb_build/src/catalog/default/: ub_duckdb_catalog_default_entries.cpp
test/cpp/duckdb_build/src/common/: ub_duckdb_common.cpp
test/cpp/duckdb_build/src/common/adbc/: ub_duckdb_adbc.cpp
test/cpp/duckdb_build/src/common/arrow/: ub_duckdb_common_arrow.cpp
test/cpp/duckdb_build/src/common/crypto/: ub_duckdb_common_crypto.cpp
test/cpp/duckdb_build/src/common/enums/: ub_duckdb_common_enums.cpp
test/cpp/duckdb_build/src/common/exception/: ub_duckdb_common_exception.cpp
test/cpp/duckdb_build/src/common/multi_file/: ub_duckdb_common_multi_file.cpp
test/cpp/duckdb_build/src/common/operator/: ub_duckdb_common_operators.cpp
test/cpp/duckdb_build/src/common/progress_bar/: ub_duckdb_progress_bar.cpp
test/cpp/duckdb_build/src/common/row_operations/: ub_duckdb_row_operations.cpp
test/cpp/duckdb_build/src/common/serializer/: ub_duckdb_common_serializer.cpp
test/cpp/duckdb_build/src/common/sort/: ub_duckdb_sort.cpp
test/cpp/duckdb_build/src/common/tree_renderer/: ub_duckdb_common_tree_renderer.cpp
test/cpp/duckdb_build/src/common/types/: ub_duckdb_common_types.cpp
test/cpp/duckdb_build/src/common/value_operations/: ub_duckdb_value_operations.cpp
test/cpp/duckdb_build/src/execution/: ub_duckdb_execution.cpp
test/cpp/duckdb_build/src/execution/expression_executor/: ub_duckdb_expression_executor.cpp
test/cpp/duckdb_build/src/execution/index/: ub_duckdb_execution_index.cpp
test/cpp/duckdb_build/src/execution/nested_loop_join/: ub_duckdb_nested_loop_join.cpp
test/cpp/duckdb_build/src/execution/physical_plan/: ub_duckdb_physical_plan.cpp
test/cpp/duckdb_build/src/execution/sample/: ub_duckdb_sample.cpp
test/cpp/duckdb_build/src/function/: ub_duckdb_function.cpp
test/cpp/duckdb_build/src/function/aggregate/: ub_duckdb_func_aggr.cpp
test/cpp/duckdb_build/src/function/cast/: ub_duckdb_func_cast.cpp
test/cpp/duckdb_build/src/function/pragma/: ub_duckdb_func_pragma.cpp
test/cpp/duckdb_build/src/function/scalar/: ub_duckdb_func_scalar.cpp
test/cpp/duckdb_build/src/function/table/: ub_duckdb_func_table.cpp
test/cpp/duckdb_build/src/function/window/: ub_duckdb_func_window.cpp
test/cpp/duckdb_build/src/logging/: ub_duckdb_logging.cpp
test/cpp/duckdb_build/src/main/: ub_duckdb_main.cpp
test/cpp/duckdb_build/src/main/buffered_data/: ub_duckdb_main_buffered_data.cpp
test/cpp/duckdb_build/src/main/capi/: ub_duckdb_main_capi.cpp
test/cpp/duckdb_build/src/main/chunk_scan_state/: ub_duckdb_main_chunk_scan_state.cpp
test/cpp/duckdb_build/src/main/http/: ub_duckdb_common_http.cpp
test/cpp/duckdb_build/src/main/relation/: ub_duckdb_main_relation.cpp
test/cpp/duckdb_build/src/main/secret/: ub_duckdb_main_secret.cpp
test/cpp/duckdb_build/src/main/settings/: ub_duckdb_main_settings.cpp
test/cpp/duckdb_build/src/optimizer/: ub_duckdb_optimizer.cpp
test/cpp/duckdb_build/src/optimizer/compressed_materialization/: ub_duckdb_optimizer_compressed_materialization.cpp
test/cpp/duckdb_build/src/optimizer/join_order/: ub_duckdb_optimizer_join_order.cpp
test/cpp/duckdb_build/src/optimizer/matcher/: ub_duckdb_optimizer_matcher.cpp
test/cpp/duckdb_build/src/optimizer/pullup/: ub_duckdb_optimizer_pullup.cpp
test/cpp/duckdb_build/src/optimizer/pushdown/: ub_duckdb_optimizer_pushdown.cpp
test/cpp/duckdb_build/src/optimizer/rule/: ub_duckdb_optimizer_rules.cpp
test/cpp/duckdb_build/src/parallel/: ub_duckdb_parallel.cpp
test/cpp/duckdb_build/src/parser/: ub_duckdb_parser.cpp
test/cpp/duckdb_build/src/parser/constraints/: ub_duckdb_constraints.cpp
test/cpp/duckdb_build/src/planner/: ub_duckdb_planner.cpp
test/cpp/duckdb_build/src/storage/: ub_duckdb_storage.cpp
test/cpp/duckdb_build/src/transaction/: ub_duckdb_transaction.cpp
test/cpp/duckdb_build/test/appender/: ub_test_appender.cpp
test/cpp/duckdb_build/test/arrow/: ub_test_arrow_roundtrip.cpp
test/cpp/duckdb_build/test/catalog/: ub_test_catalog.cpp
test/cpp/duckdb_build/test/common/: ub_test_common.cpp
test/cpp/duckdb_build/test/extension/: ub_test_extensions.cpp
test/cpp/duckdb_build/test/logging/: ub_test_logging.cpp
test/cpp/duckdb_build/test/mbedtls/: ub_test_mbedtls.cpp
test/cpp/duckdb_build/test/memoryleak/: ub_test_memory_leak.cpp
test/cpp/duckdb_build/test/ossfuzz/: ub_test_ossfuzz.cpp
test/cpp/duckdb_build/test/parallel_csv/: ub_test_parallel_csv.cpp
test/cpp/duckdb_build/test/persistence/: ub_test_persistence.cpp
test/cpp/duckdb_build/test/secrets/: ub_test_secrets.cpp
test/cpp/duckdb_build/test/serialize/: ub_test_serialization.cpp
test/cpp/duckdb_build/test/sqlite/: ub_test_sqlite.cpp
test/cpp/duckdb_build/tools/sqlite3_api_wrapper/: test_sqlite3_api_wrapper
(+126 files in other folders)
